# lidar_mydetect

lidar_perception/: CMakeLists.txt  package.xml
lidar_perception/launch/: demo.launch  demo.rviz
lidar_perception/src/: boxer.cpp  boxer.h  cluster.cpp  cluster.h  ground_detect.cpp  ground_detect.h  main.cpp
